viblo-image-server/k8s/frontend/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: 1G
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - a0ee6e.learnk8s.jamesisme.com
      secretName: frontend-tls
  rules:
    - host: a0ee6e.learnk8s.jamesisme.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  name: svc-http
